created game html page

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
         <p>
             Try to answer the following wrestling-related questions within the time limit. Keep in mind that incorrect answers will penalize your score/time by ten seconds.
         </p>
-        <button id="start-button"><a href="./game.html">Start Quiz</a></button>
+        <a href="./game.html">
+            <button id="start-button">Start Quiz</button>
+        </a>
     </main>
-  </body>
-    <script src="./assets/js/script.js"></script>
   </body>
 </html>
