displaying first question on screen

--- a/game.html
+++ b/game.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!--This is the page the user sees after clicking the start button, this page displays the multiple choice questions-->
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -15,10 +16,10 @@
     <main>
         <h2 id="game-question"></h2>
         <ul>
-            <button id="answer-1"></button>
-            <button id="answer-2"></button>
-            <button id="answer-3"></button>
-            <button id="answer-4"></button>
+            <button id="answer-1" class="answer"></button>
+            <button id="answer-2" class="answer"></button>
+            <button id="answer-3" class="answer"></button>
+            <button id="answer-4" class="answer"></button>
         </ul>
     </main>
     <script src="./assets/js/script.js"></script>
