--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!--This is the home page that the user sees when opening the application-->
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
