can play quiz with one question

--- a/game.html
+++ b/game.html
@@ -15,11 +15,11 @@
     </header>
     <main>
         <h2 id="game-question"></h2>
-        <ul>
-            <button id="answer-1" class="answer"></button>
-            <button id="answer-2" class="answer"></button>
-            <button id="answer-3" class="answer"></button>
-            <button id="answer-4" class="answer"></button>
+        <ul class="answer">
+            <button id="answer-1"></button>
+            <button id="answer-2"></button>
+            <button id="answer-3"></button>
+            <button id="answer-4"></button>
         </ul>
     </main>
     <script src="./assets/js/script.js"></script>
