able to clear high scores

--- a/high-score.html
+++ b/high-score.html
@@ -16,7 +16,7 @@
         </ol>
     </main>
     <footer>
-        <button><a href="./index.html">Go back</a></button>
+        <a href="./index.html"><button>Go back</button></a>
         <button id="clear-scores">Clear high scores</button>
     </footer>
     <script src="./assets/js/high-scores.js"></script>
