added CSS styling

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
         <p><a href="./high-score.html">View high scores</a></p>
         <p>Time: 0</p>
     </header>
-    <main>
-        <h1>Pro Wrestling Quiz Challenge</h1>
-        <p>
+    <main id="home-page" class="main-section">
+        <h1 id="title">Pro Wrestling Quiz Challenge</h1>
+        <p id="description">
             Try to answer the following wrestling-related questions within the time limit. Keep in mind that incorrect answers will penalize your score/time by ten seconds.
         </p>
         <a href="./game.html">
