--- a/game-over.html
+++ b/game-over.html
@@ -13,7 +13,7 @@
         <p><a href="./high-score.html">View high scores</a></p>
         <p>Time: <span id="time-left" class="score"></span></p>
     </header>
-    <main>
+    <main class="main-section">
         <h2>All done!</h2>
         <p>Your final score is <span id="final-score"></span>.</p>
         <form id="score-form">
