--- a/high-score.html
+++ b/high-score.html
@@ -9,11 +9,11 @@
     <title>Pro Wrestling Quiz</title>
   </head>
   <body>
-    <h2>High Scores</h2>
-    <main>
-        <ol id="scores-list">
+    <main class="main-section">
+      <h2>High Scores</h2>
+      <ol id="scores-list">
 
-        </ol>
+      </ol>
     </main>
     <footer>
         <a href="./index.html"><button>Go back</button></a>
