completed styling for start page

--- a/game-over.html
+++ b/game-over.html
@@ -13,10 +13,11 @@
         <p><a href="./high-score.html">View high scores</a></p>
         <p>Time: <span id="time-left" class="score"></span></p>
     </header>
-    <main class="main-section">
+    <main id="game-over-page" class="main-section">
         <h2>All done!</h2>
         <p>Your final score is <span id="final-score"></span>.</p>
         <form id="score-form">
+            <p>Enter initials: </p>
             <input type="text" id="user-initials" />
             <button id="submit-button">Submit</button>
         </form>
