--- a/game.html
+++ b/game.html
@@ -13,7 +13,7 @@
         <p><a href="./high-score.html">View high scores</a></p>
         <p>Time: <span id="time-left"></span></p>
     </header>
-    <main class="main-section">
+    <main id="game-page" class="main-section">
         <h2 id="game-question"></h2>
         <ul class="answer">
             <button id="answer-1"></button>
