--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <p><a href="./high-score.html">View high scores</a></p>
         <p>Time: 0</p>
     </header>
-    <main id="home-page" class="main-section">
+    <section id="home-page" class="main-section">
         <h1 id="title">Pro Wrestling Quiz Challenge</h1>
         <p id="description">
             Try to answer the following wrestling-related questions within the time limit. Keep in mind that incorrect answers will penalize your score/time by ten seconds.
@@ -21,6 +21,6 @@
         <a href="./game.html">
             <button id="start-button">Start Quiz</button>
         </a>
-    </main>
+    </section>
   </body>
 </html>
