completed styling for game screen

--- a/game.html
+++ b/game.html
@@ -13,15 +13,15 @@
         <p><a href="./high-score.html">View high scores</a></p>
         <p>Time: <span id="time-left"></span></p>
     </header>
-    <main id="game-page" class="main-section">
+    <section id="game-page" class="main-section">
         <h2 id="game-question"></h2>
         <ul class="answer">
-            <button id="answer-1"></button>
-            <button id="answer-2"></button>
-            <button id="answer-3"></button>
-            <button id="answer-4"></button>
+            <button id="answer-1" class="buttons"></button>
+            <button id="answer-2" class="buttons"></button>
+            <button id="answer-3" class="buttons"></button>
+            <button id="answer-4" class="buttons"></button>
         </ul>
-    </main>
+    </section>
     <script src="./assets/js/script.js"></script>
   </body>
 </html>
