--- a/game-over.html
+++ b/game-over.html
@@ -13,7 +13,7 @@
         <p><a href="./high-score.html">View high scores</a></p>
         <p>Time: <span id="time-left" class="score"></span></p>
     </header>
-    <main id="game-over-page" class="main-section">
+    <section id="game-over-page" class="main-section">
         <h2>All done!</h2>
         <p>Your final score is <span id="final-score"></span>.</p>
         <form id="score-form">
@@ -21,7 +21,7 @@
             <input type="text" id="user-initials" />
             <button id="submit-button">Submit</button>
         </form>
-    </main>
+    </section>
     <script src="./assets/js/score-calculation.js"></script>
   </body>
 </html>
