fixed resizing issue in game-over screen

--- a/game-over.html
+++ b/game-over.html
@@ -17,9 +17,13 @@
         <h2>All done!</h2>
         <p>Your final score is <span id="final-score"></span>.</p>
         <form id="score-form">
-            <p>Enter initials: </p>
-            <input type="text" id="user-initials" />
-            <button id="submit-button">Submit</button>
+            <div id="user-form">
+              <div id="input-form">
+                <p>Enter initials: </p>
+                <input type="text" id="user-initials" />
+              </div>
+              <button id="submit-button">Submit</button>
+            </div>
         </form>
     </section>
     <script src="./assets/js/score-calculation.js"></script>
